[package]
name = "dbsampler"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dbsampler"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
hashbrown = { version = "0.14.3", features = ["rayon"] }
nohash-hasher = "0.2.0"
pyo3 = "0.18.1"
rand = "0.8.5"
rayon = "1.8.1"
