[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "dbsampler"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name="António Leitão", email="aleitao@novaims.unl.pt" },
]
description = "Decision Boundary Sampler"
readme = "README.md"

[project.urls]
homepage = "https://github.com/antonio-leitao/dbsampler"
repository = "https://github.com/antonio-leitao/dbsampler"

[tool.maturin]
features = ["pyo3/extension-module"]

